# teeny_data_framework

./: .gitignore  .mise.toml  CLAUDE.md  Makefile  README.md  census_dhc_2020.py  encoding_example.py  example_census_dhc_2020.py  example_encoding.py  example_iris_dataset.py  example_nic.py  iris_dataset.py  justfile  pyproject.toml  table_functions.py  table_functions_postgres.py
notebooks/: README.md  census_dhc_2020.py  encoding_example.py  iris_dataset.py
notebooks/__marimo__/session/: iris_dataset.py.json
scripts/: pre-push  table_functions_spark.py
src/: __init__.py  table_functions_postgres.py
tests/: README.md  __init__.py  test_s3_support.py  test_table_functions.py  test_table_functions_postgres.py
