[project]
name = "teeny-data-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.42.25",
  "marimo>=0.19.1",
  "openpyxl>=3.1.5",
  "pandas>=2.3.3",
  "psycopg>=3.3.2",
  "psycopg-binary>=3.3.2",
  "pyarrow>=22.0.0",
]

[dependency-groups]
dev = [
    "marimo>=0.19.2",
    "pytest>=9.0.2",
    "testcontainers[postgres]>=4.14.0",
]
