[project]
name = "teeny-data-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "inflection>=0.5.1",
  "duckdb>=1.4.3",
  "fastexcel>=0.18.0",
  "loguru>=0.7.0",
  "marimo>=0.19.1",
  "openpyxl>=3.1.5",
  "pandas>=2.3.3",
  "polars>=1.37.1",
  "psycopg>=3.3.2",
  "psycopg-binary>=3.3.2",
  "pyarrow>=22.0.0",
  "s3fs>=2024.0.0",
  "sqlglot>=28.6.0",
  "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "marimo>=0.19.2",
    "pytest>=9.0.2",
    "testcontainers[postgres]>=4.14.0",
]
