[project]
name = "teeny-data-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "inflection>=0.5.1",
  "fastexcel>=0.18.0",
  "marimo>=0.19.1",
  "openpyxl>=3.1.5",
  "pandas>=2.3.3",
  "polars>=1.37.1",
  "psycopg[binary]>=3.3.2",
  "pyarrow>=22.0.0",
  "boto3>=1.35.0",
  "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
  "sqlglot>=28.6.0",
  "pytest>=9.0.2",
  "testcontainers[postgres]>=4.14.0",
  "ty>=0.0.12",
  "ruff>=0.14.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["."]
